Seo added to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
     <title>Yorktown Jewelers</title>
+    <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta name="description" content="Yorktown Jewelers offers custom engagement rings, expert jewelry repair, appraisals, and vintage watch restoration in Yorktown Heights, NY." />
+  <meta name="keywords" content="Yorktown Heights jewelry store, engagement rings, jewelry repair, watch restoration, GIA appraisals, custom jewelry Yorktown" />
+  <meta name="author" content="Yorktown Jewelers" />
+
+  <!-- Open Graph / Social -->
+  <meta property="og:title" content="Yorktown Jewelers | Custom Engagement Rings & Jewelry Repair" />
+  <meta property="og:description" content="Full-service jewelry design, repair, and watch restoration in Yorktown Heights, NY. Visit our showroom or contact our GIA-certified team today." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.yorktown-jewelers.com/" />
+  <meta property="og:image" content="https://www.yorktown-jewelers.com/og-preview.jpg" /> <!-- Replace with actual image -->
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Yorktown Jewelers" />
+  <meta name="twitter:description" content="Custom engagement rings, jewelry design, and expert repairs in Yorktown Heights, NY." />
+  <meta name="twitter:image" content="https://www.yorktown-jewelers.com/og-preview.jpg" /> <!-- Replace with actual image -->
+
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <title>Yorktown Jewelers | Custom Jewelry & Repairs in Yorktown Heights, NY</title>
+
   </head>
   <body>
     <div id="root"></div>
